# REmatch-py

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.sh  setup.py
.github/workflows/: pypi-wheels.yml
scripts/: deploy.sh  pre_install_linux.sh  pre_install_macos.sh  prebuild_linux.sh  prebuild_macos.sh  prebuild_windows.ps1  preset_linux.sh  preset_macos.sh  preset_windows.ps1
src/: CMakeLists.txt
